@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-# include debian files into distribution
+# include win32 project files into distribution
 EXTRA_DIST = dllmain.cpp \
              dlsdump.dev \
              gigdump.dev \
